node-affinity2-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    author: trinath
spec:
  replicas: 3
  selector:
    matchLabels:
      author: trinath
  template:
    metadata:
      name: nginx-pod
      labels:
        author: trinath
    spec:
      containers:
        - name: nginx
          image: nginx
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - nodeSelectorTerms:
                - matchExpressions:
                    - key: disk
                      operator: In
                      values:
                        - trinath
...
