postgres-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    name: postgres-pod
    author: trinath
spec:
  containers:
    - name: postgres
      image: postgres
...
