redis-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    name: redis-pod
    author: trinath
spec:
  containers:
    - name: redis-pod
      image: redis
      ports:
        - containerPort: 6379
...
