result-app-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: result-pod
  labels:
    author: trinath
spec:
  containers:
    - name: result-pod
      image: dockersamples/examplevotingapp_vote
      ports:
        - containerPort: 80
...
