tolerations1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-pod
  labels:
    author: trinath
spec:
  containers:
    - name: tomcat-pod
      image: tomee
  tolerations:
    - key: node
      value: trinath
      effect: NoSchedule
      operator: Equal
...
