voting-app-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deployment
  labels:
    name: voting-app-deploment
spec:
  replicas: 3
  selector:
    matchLabels:
      name: voting-app-deployment
  template:
    metadata:
      name: voting-app-pod
    spec:
      containers:
        - name: voting-app
          image: dockersamples/examplevotingapp_vote
          ports:
            - containerPort: 80
...
