voting-app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: voting-app-pod
  labels:
    author: trinath
spec:
  containers:
    - name: voting-app
      image: dockersamples/examplevotingapp_vote
      ports:
        - containerPort: 80
 ...
