worker-app-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: worker-pod
  labels:
    name: worker-pod
    author: trinath
spec:
  containers:
    - name: worker-pod
      image: dockersamples/examplevotingapp_worker
      ports:
...
