worker-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    name: worker-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      name: worker-deployment
  template:
    metadata:
      name: worker-pod
      labels:
        name: worker-deployment
    spec:
      containers:
        - name: worker
          image: dockersamples/examplevotingapp_worker
...
