postgres-deployment-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    name: postgres-service
spec:
  ports:
    - targetPort: 5432
      port:
  selector:
    type: db
...
