postgres-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    name: postgres-service
    author: trinath
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: postgres-pod
    author: trinath
...
