redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    name: redis-service
    author: trinath
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    name: redis-pod
    author: trinath
...
