result-app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: result-app-servie
  labels:
    name: result-app-service
    author: trinath
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
  selector:
    name: result-app-pod
    author: trinath
...
