voting-pod.yml
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app-service
  labels:
    name: voting-app-service
    author: trinath
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
  selector:
    name: voting-app-pod
    author: trinath
...
